fix: create form can fill id field now   creating an object with existing id is prohibited refactor: StringUtils on save and close